--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
